samples/bookmap/invalid/R18.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <booktitle><booklibrary>L</booklibrary><mainbooktitle>T</mainbooktitle></booktitle>
  <bookmeta/>
  <frontmatter/>
  <chapter href="c.dita"><topicmeta><navtitle>C</navtitle></topicmeta></chapter>
  <appendix> {/* Missing href */}
    <topicmeta><navtitle>Appendix Title</navtitle></topicmeta>
  </appendix>
</bookmap>